--- a/ind/ind.css
+++ b/ind/ind.css
@@ -8,3 +8,6 @@
     padding-left: 15%;
     padding-right: 15%;
 }
+body, p, h1, h2, h3, h4, h5, h6, a {
+    font-family: 'Montserrat', sans-serif;
+}
