--- a/ind/ind.css
+++ b/ind/ind.css
@@ -1,6 +1,11 @@
 #title {
     color: white;
 }
+
+title {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem;
+}
 .container {
     padding-top: 3%;
     padding-bottom: 3%;
