--- a/ind/ind.css
+++ b/ind/ind.css
@@ -24,6 +24,8 @@ h1 {
 }
 
 .navbar-nav .nav-link {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
     padding-left: 18px;
     padding-right: 18px;
 }
