--- a/ind/ind.css
+++ b/ind/ind.css
@@ -5,8 +5,11 @@
 title {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
+    margin: 0;
 }
 .container {
+    display: flex;
+    align-items: center;
     padding-top: 3%;
     padding-bottom: 3%;
     padding-left: 15%;
