--- a/ind/ind.css
+++ b/ind/ind.css
@@ -43,3 +43,33 @@ h1 {
 p {
     font-size: 3.5rem;
 }
+
+
+/* 4.7 */
+
+section#features {
+    background-color: #fff;
+    padding: 50px 0;
+    
+}
+
+section#features h3 {
+    font-family: 'Montserrat';
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+section#features i {
+    color: #ef8172;
+}
+section#features i:hover {
+    color: #ff4c68;
+}
+
+section#features p {
+    color: #8f8f8f;
+    font-family: 'Montserrat';
+}
+
+/* 4.7 */
+
