--- a/ind/ind.css
+++ b/ind/ind.css
@@ -73,3 +73,19 @@ section#features p {
 
 /* 4.7 */
 
+/* 4.8 */
+#testimonials {
+    background-size: cover;
+    background-position: center;
+    background-color: #ef8172;
+}
+#press {
+    background-color:#ef8172 !important;
+}
+#press img {
+    margin: 10px;
+    width: 150px;
+    height: auto;
+}
+
+/* 4.8 */
