--- a/ind/ind.css
+++ b/ind/ind.css
@@ -41,7 +41,7 @@ h1 {
     transform: rotate(25deg);
 }
 p {
-    font-size: 3.5rem;
+    font-size: 1.5rem;
 }
 
 
@@ -113,23 +113,15 @@ section#features p {
 .card-body {
   padding: 20px;
 }
-
-.card-body h3 {
-  font-family: Montserrat;
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
-.card-body h4 {
-  font-family: Montserrat;
-  font-weight: 700;
-  font-size: 1rem;
-}
-
 .card-body p {
   font-family: Montserrat;
   font-weight: 700;
   font-size: 1rem;
+}
+.card-body h3 {
+  font-family: Montserrat;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 
 .card-body button {
@@ -139,6 +131,37 @@ section#features p {
   background-color: white;
   border-color: black;
 }
+.card-body h4 {
+  font-family: Montserrat;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
 /* 4.10 */
 
 
+/* 4.11 */
+
+.redes-sociales a:hover {
+    color: #ff4c68;
+}
+.redes-sociales a {
+    color: #fff;
+    font-size: 1.5rem;
+    margin: 0 25px;
+}
+.redes-sociales {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 45px;
+}
+#footer {
+    background-color: #ef8172;
+    color: #fff;
+    padding: 80px;
+    text-align: center;
+}
+
+/* 4.11 */
